# SelfRenderingEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RayTracingTest.sln  RenderingEngine.sln  cmake_install.cmake
.github/workflows/: c-cpp.yml
RayTracingTest/: CMakeLists.txt  Camera.cpp  Camera.h  CameraOrbitControl.cpp  CameraOrbitControl.h  DirectionalLight.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  RayTracingTest.cpp  RayTracingTest.h  RayTracingTest.vcxproj  RayTracingTest.vcxproj.filters  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Utility.h  cmake_install.cmake  fragment.fs
RayTracingTest/Debug/: vc142.idb
RayTracingTest/Debug/RayTracingTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracingTest.lastbuildstate
RayTracingTest/shader/: fragment.fs  vertex.vs
RayTracingTest/x64/Debug/: RayTracingTest.exe.recipe  vc142.idb
RayTracingTest/x64/Debug/RayTracingTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracingTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RenderingEngine/: CameraOrbitControl.cpp  DirectionalLight.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  RayTracingTest.vcxproj  RayTracingTest.vcxproj.filters  RenderingEngine.cpp  Scene.cpp  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
RenderingEngine/shader/: fragment.fs  phongFragment.fs  vertex.vs
src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
src/Debug/: assimp-vc142-mtd.exp  glfw3.lib
src/glfw.dir/Debug/: glfw3.lib.recipe
src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
x64/Debug/: RayTracingTest.ilk
